k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-mina
  labels:
    name: project-mina
